# ai-clipper

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  MEMORY.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/core/db/: client.py  health.py
backend/app/core/gpu/: vram.py
backend/app/core/gpu/tests/: test_vram.py
backend/app/core/logging/: setup.py
backend/app/core/models/: loader.py
backend/app/core/schemas/: video_status.py
backend/app/core/ws/: manager.py  routes.py
backend/app/core/ws/tests/: test_manager.py  test_routes.py
backend/app/features/import_/: cleanup.py  errors.py  media.py  repository.py  routes.py  schemas.py  service.py  tasks.py  youtube.py
backend/app/features/import_/tests/: conftest.py  test_cleanup.py  test_errors.py  test_importing_filter.py  test_media.py  test_repository.py  test_routes.py  test_schemas.py  test_service.py  test_url_import.py  test_youtube.py
backend/app/features/transcription/: coordinator.py  errors.py  repository.py  routes.py  schemas.py  service.py  whisper.py
backend/app/features/transcription/tests/: conftest.py  test_coordinator.py  test_errors.py  test_repository.py  test_routes.py  test_schemas.py  test_video_repo_queue.py  test_whisper.py
backend/app/workers/: transcription.py
backend/app/workers/tests/: conftest.py  test_transcription.py
backend/scripts/: download_models.py  download_whisper_large.py  generate_ts.py  init_db.py
backend/tests/: test_config.py  test_config_transcription.py  test_generate_ts.py  test_health.py  test_init_db.py  test_model_loader.py
docs/: ai-clipper-spec.html  execution-plan.html  memory.md
docs/features/: phase-2-chunking.md
docs/features/transcription-pipeline/: transcription-pipeline-prd.md  transcription-pipeline-technical-docs.md  transcription-pipeline-verification.md
docs/features/video-import/: video-import-prd.md  video-import-technical-docs.md  video-import-verification.md
frontend/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: transcription-pipeline.spec.ts  video-import.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/AppBar/: index.tsx
frontend/src/components/Providers/: index.tsx
frontend/src/features/import/: types.ts
frontend/src/features/import/components/DeleteConfirmDialog/: DeleteConfirmDialog.test.tsx  index.tsx
frontend/src/features/import/components/EmptyState/: index.tsx
frontend/src/features/import/components/ImportPanel/: index.tsx
frontend/src/features/import/components/StatusChip/: StatusChip.test.tsx  index.tsx
frontend/src/features/import/components/StatusFilterChips/: StatusFilterChips.test.tsx  index.tsx
frontend/src/features/import/components/UploadDropzone/: index.tsx
frontend/src/features/import/components/UrlImportForm/: UrlImportForm.test.tsx  index.tsx
frontend/src/features/import/components/VideoCard/: VideoCard.test.tsx  index.tsx
frontend/src/features/import/components/VideoCard/ProgressOverlay/: ProgressOverlay.test.tsx  index.tsx
frontend/src/features/import/components/VideoCard/QueuePositionPill/: QueuePositionPill.test.tsx  index.tsx
frontend/src/features/import/components/VideoCard/ResumptionHint/: ResumptionHint.test.tsx  index.tsx
frontend/src/features/import/components/VideoCard/RetryButton/: RetryButton.test.tsx  index.tsx
frontend/src/features/import/components/VideoLibrary/: index.tsx
frontend/src/features/import/hooks/: test-utils.tsx  useDeleteVideo.test.tsx  useDeleteVideo.ts  useImportUrl.test.tsx  useImportUrl.ts  useRetryTranscription.test.tsx  useRetryTranscription.ts  useUploadVideo.test.tsx  useUploadVideo.ts  useVideos.test.tsx  useVideos.ts
frontend/src/features/import/lib/: format.test.ts  format.ts  surfaces.ts
frontend/src/lib/: api.ts  env.ts  no-hex.test.ts  surfaces.test.ts  surfaces.ts  swr.ts  theme.test.ts  theme.ts  tokens.test.ts  tokens.ts  transcription-types.ts  useTranscriptionProgress.test.tsx  useTranscriptionProgress.ts  ws.ts
frontend/src/types/: mui-augment.d.ts
